[gd_scene load_steps=5 format=3 uid="uid://et14fsi8f1vh"]

[ext_resource type="Script" path="res://Scripts/building.gd" id="1_ieua2"]
[ext_resource type="Texture2D" uid="uid://cp0srp06w5gbn" path="res://Arte/Mio/building1.png" id="2_owme1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qdulu"]
size = Vector2(547.554, 727.732)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hlue"]
size = Vector2(209, 280)

[node name="building_1" type="Node2D"]
script = ExtResource("1_ieua2")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.427355, 0.427355)
texture = ExtResource("2_owme1")

[node name="Area2D" type="Area2D" parent="Sprite2D"]
visible = false
collision_layer = 16
collision_mask = 19
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
shape = SubResource("RectangleShape2D_qdulu")

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_layer = 16
collision_mask = 3
mass = 1000.0
gravity_scale = 0.0
freeze = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(-0.5, -2)
shape = SubResource("RectangleShape2D_0hlue")

[connection signal="area_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
